# Hucky

./: README.md  package-lock.json  test.html
backend/: .env.example  .gitignore  Cargo.toml  docker-compose.yml
backend/migrations/: 20260502100341_initial_schema.sql  20260502113047_teams_and_invitations.sql  20260505120000_person4_submissions_evaluation.sql  20260509120000_tournaments_rounds.sql  20260511150000_account_roles.sql  20260512190000_user_avatar.sql  20260514170000_generated_certificates.sql
backend/src/: automation.rs  config.rs  error.rs  lib.rs  main.rs  state.rs
backend/src/certificates/: dto.rs  model.rs  repository.rs  routes.rs  service.rs
backend/src/evaluations/: dto.rs  mod.rs  model.rs  repository.rs  routes.rs  service.rs
backend/src/jury/: dto.rs  model.rs  repository.rs  routes.rs  service.rs
backend/src/leaderboard/: dto.rs  mod.rs  model.rs  repository.rs  routes.rs  service.rs
backend/src/rounds/: dto.rs  model.rs  repository.rs  routes.rs  service.rs
backend/src/submissions/: dto.rs  mod.rs  model.rs  repository.rs  routes.rs  service.rs
backend/src/teams/: dto.rs  mod.rs  model.rs  repository.rs  routes.rs  service.rs  tests.rs
backend/src/tournaments/: dto.rs  model.rs  repository.rs  routes.rs  service.rs
backend/src/users/: auth.rs  mod.rs  model.rs  repository.rs  routes.rs  service.rs
backend/tests/: api_health.rs
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: app.css  hooks.server.js
frontend/src/components/: CardShell.svelte  GradingLink.svelte  Link.svelte  (+7 more)
(+62 files in other folders)
